# SandSim

./: .gitignore  CMakeLists.txt  README.md
include/: CellularMatrix.h  Elements.h  Sim.h  World.h
src/: cellularmatrix.cpp  elements.cpp  main.cpp  sim.cpp
